objects/Rate_Card__c.object
<CustomObject>
    <description>Rate Cards will store values for buy and sell fees that can be assigned to dealers.</description>
    <fields>
        <fullName>ACV_Id__c</fullName>
        <description>ACV Id returned from the publish endpoint</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ACV Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Tracks statuses of the approval workflow.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>Description of the rate card which can be changed at any time.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Display Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <description>The fee for which this rate card is being defined for.</description>
        <label>Fee Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>buy_fee</fullName>
                    <label>Buyer Fee</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Card_State__c</fullName>
        <description>Active rate cards can be assigned to any dealer, Legacy rate cards are being phased out and Archived ones are not assigned to any dealer</description>
        <inlineHelpText>Active rate cards can be assigned to any dealer, Legacy rate cards are being phased out and Archived ones are not assigned to any dealer</inlineHelpText>
        <label>Rate Card State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rate Card</label>
    <listViews>
        <fullName>Rate_Card_Approver_Rate_Card</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>In Review</value>
        </filters>
        <label>Rate Card Approver</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rate_Cards</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Rate_Card_State__c</columns>
        <columns>Fee_Type__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Rate Cards</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Rate Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>